--- a/GameKnight/.settings/org.eclipse.wst.common.component
+++ b/GameKnight/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,6 @@
     <wb-module deploy-name="GameKnight">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <property name="context-root" value="GameKnight"/>
-        <property name="java-output-path" value="/GameKnight/build/classes"/>
+        <property name="java-output-path" value="/GameKnight/bin"/>
     </wb-module>
 </project-modules>
